# server

./: .gitignore  404.html  Cargo.toml  nohup.out  start.sh
hyper-build/: 404.html  home.html
hyper-build/projects/: fishbowl.html  forte.html  fractal-explorer.html  html-templating.html  http-server.html  math-interpreter.html  nd-range.html  pokedex.html  stocktrading.html
hyper-src/: home.html
hyper-src/projects/: fishbowl.html  forte.html  fractal-explorer.html  html-templating.html  http-server.html  nd-range.html  pokedex.html  stocktrading.html
js/fishbowl/: fishbowl.d.ts  fishbowl.js  fishbowl_bg.wasm  fishbowl_bg.wasm.d.ts
js/forte/: forte.js  forte_bg.wasm  package.json
src/: forms.rs  get.rs  logging.rs  main.rs  post.rs  util.rs
styles/: extend.css
templates/: blueprints.html
