[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = {version="0.12", features=["ssl-openssl"]}
log4rs = "1.3"
log = "0.4"
tokio = {version = "1", features = ["full"]}
ascii = "1.1"
fishbowl = {path="../fishbowl"}

